@@ -21,10 +21,12 @@
 # along with this program; If not, see <http://www.gnu.org/licenses/>.                                     #
 ############################################################################################################
 
-SHELL = /bin/tcsh
+SHELL = /bin/bash
 
 DESTDIR              ?=
 PREFIX               ?= /usr/local
+INSTALLDIR1          := $(shell readlink -f "$(DESTDIR)$(PREFIX)")
+INSTALLDIR2          := $(shell readlink -f "$(DESTDIR).")
 BINDIR               ?= $(PREFIX)/bin
 ETCDIR               ?= $(PREFIX)/etc
 SHAREDIR             ?= $(PREFIX)/share
@@ -48,7 +50,7 @@ ORGANISM              = Human
 
 
 .PHONY: install
-ifeq ('$(PREFIX)' , '.')
+ifeq ('$(INSTALLDIR1)' , '$(INSTALLDIR2)')
 all: install-ligth
 install: install-ligth
 else
@@ -56,12 +58,17 @@ all: install-complete
 install: install-complete
 endif
 
-install-ligth: $(DOCUMENTATIONS)
-	$(MV) $^ $(DESTDIR)$(DOCDIR)/$(ANNOTSV)
-	$(MV) $(TCLDIRDISTRIBUTED) $(TCLDIR)
+install-ligth: install-display install-documentationlight
 	@echo "Done"
 
-install-complete: install-configfile install-executable install-tcl-toolbox install-doc install-others-doc install-biological-data
+install-documentationlight: $(DOCUMENTATIONS)
+	$(MV) $^ $(DESTDIR)$(DOCDIR)/AnnotSV
+	$(MV) $(TCLDIRDISTRIBUTED) $(TCLDIR)
+
+install-complete: install-display install-configfile install-executable install-tcl-toolbox install-doc install-others-doc
+	@echo "Done"
+
+install-display:
 	@echo ""
 	@echo "Installation of $(ANNOTSV)-$(VERSION):"
 	@echo "--------------------------------"
@@ -69,7 +76,6 @@ install-complete: install-configfile install-executable install-tcl-toolbox inst
 	@echo PREFIX=$(PREFIX)
 	@echo TCLVERSION=$(TCLVERSION)
 	@echo ""
-	@echo "Done"
 
 install-configfile: $(CONFIGFILE)
 	@echo ""
@@ -82,7 +88,7 @@ install-executable:
 	@echo ""
 	@echo "Executable installation"
 	@echo "-----------------------"
-	install -p -m 0755 bin/AnnotSV.tcl $(DESTDIR)$(BINDIR)/$(ANNOTSV)
+	install -p -m 0755 bin/AnnotSV.tcl $(DESTDIR)$(BINDIR)
 
 install-tcl-toolbox: $(TCL_SCRIPTS)
 	@echo ""
@@ -98,7 +104,8 @@ install-doc: $(DOCUMENTATIONS)
 	$(MKDIR) $(DESTDIR)$(DOCDIR)/$(ANNOTSV)
 	$(CP) $^ $(DESTDIR)$(DOCDIR)/$(ANNOTSV)
 
-install-others-doc: share/doc/$(ANNOTSV)/Example
+#install-others-doc: share/doc/$(ANNOTSV)/Example
+install-others-doc: $(OTHERS_DOCUMENTATIONS)
 	$(CPDIR) $^ $(DESTDIR)$(DOCDIR)/$(ANNOTSV)
 
 install-biological-data: share/doc/$(ANNOTSV)/Annotations_$(ORGANISM)
